<resources>
    <string name="app_name">Projektuppgift</string>
    <string name="action_settings">Settings</string>
    <string name="r1">Start Game!</string>
    <string name="r2">Highscores!</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="r3">Back to Main Menu</string>
    <string name="r4">Score</string>
    <string name="r5">Score</string>
    <string name="r6">Enter name please!</string>
    <string name="r7">Enter name</string>
    <string name="r8">View name</string>
    <string name="r9">Add Name</string>
</resources>
